--- a/src/base/_nav.html
+++ b/src/base/_nav.html
@@ -19,7 +19,7 @@
         </button>
 
         <!-- Main title -->
-        <a class="navbar-brand" href="{{ site.home_url }}">{{ site.name }}</a>
+        <a class="navbar-brand" href="{{ site.home_url }}"><span class="navbar-brand__inner">{{ site.name }}</span></a>
       </div>
 
       <!-- Expanded navigation -->
@@ -29,7 +29,7 @@
         {% for nav_item in nav %}
         {% if nav_item.children %}
           <li class="dropdown{% if nav_item.active %} active{% endif %}">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ nav_item.title }} <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ nav_item.title }}</a>
             <ul class="dropdown-menu">
             {% for nav_item in nav_item.children %}
               <li {% if nav_item.active %}class="active"{% endif %}>
