调整子页面标题元素的风格

--- a/src/base/_schedule.html
+++ b/src/base/_schedule.html
@@ -28,7 +28,7 @@
 {% endmacro %}
 
 {% if schedule %}
-    <h1 class="section__title--index">{{ schedule_title }}</h1>
+    <h1 class="section__title--subpage-header">{{ schedule_title }}</h1>
     <section class="page__module">
     <h2 class="section__title">{{ message.traffic }}</h2>
     <dl class="schedule__metadata">
