--- a/src/sponsors.html
+++ b/src/sponsors.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<h1 class="section__title--index">{{ message.sponsors }}</h1>
+<h1 class="section__title--subpage-header">{{ message.sponsors }}</h1>
 <p class="sponsorpage__text">{{ message.sponsors_hint }}</p>
 
 {% if sponsors %}
