--- a/src/volunteers.html
+++ b/src/volunteers.html
@@ -35,7 +35,7 @@
         </div>
     {% endmacro %}
     {# presentation #}
-    <h1 class="section__title--index">{{ message.volunteers }}</h1>
+    <h1 class="section__title--subpage-header">{{ message.volunteers }}</h1>
     <section class="volunteers__text">
         <p class="volunteers__pythoneer">{{ message.pythoneer }}</p>
     </section>
