--- a/src/base/_schedule.html
+++ b/src/base/_schedule.html
@@ -4,7 +4,24 @@
     {% if speech.speaker %}
         {% set a_speaker = speakers[speech.speaker] %}
         {% if a_speaker and a_speaker.topic %}
-            <td class="schedule__topic__title">{{ a_speaker.topic.title or "" }}</td>
+            <td class="schedule__topic__title">
+                {{ a_speaker.topic.title or "" }} <br/>
+                {% if a_speaker.topic.slide %}
+                    <a href="{{ a_speaker.topic.slide }}" class="schedule__topic__slide">
+                        {{- message.slide -}}
+                    </a>
+                {% endif %}
+                {% if a_speaker.topic.audio %}
+                    <a href="{{ a_speaker.topic.audio }}" class="schedule__topic__audio">
+                        {{- message.audio -}}
+                    </a>
+                {% endif %}
+                {% if a_speaker.topic.video %}
+                    <a href="{{ a_speaker.topic.video }}" class="schedule__topic__video">
+                        {{- message.video -}}
+                    </a>
+                {% endif %}
+            </td>
             <td class="schedule__topic__speaker">{{ a_speaker.name or "" }} </td>
             <td class="schedule__topic__preview">{{ a_speaker.topic.preview or "" }} </td>
         {% else %}
@@ -47,6 +64,7 @@
                 {{ speech_trs(schedule.noon, message.noon) }}
                 {{ speech_trs(schedule.afternoon, message.afternoon) }}
                 {{ speech_trs(schedule.lightening_talks, message.lighting_talks) }}
+                {{ speech_trs(schedule.cancel_talks, message.cancel_talks) }}
             </tbody>
         </table>
 		</div>
