--- a/src/zhuhai.html
+++ b/src/zhuhai.html
@@ -5,6 +5,6 @@
 {% if agenda.zhuhai %}
     {% set schedule = agenda.zhuhai %}
     {% set schedule_title = page_title %}
-    {% include "base/zh_schedule.html" %}
+    {% include "base/_schedule.html" %}
 {% endif %}
 {% endblock %}
