--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,13 @@
 <section class="page__module mod-title">
 <img alt="Logo of PyCon China 2014" src="http://zoomq.qiniudn.com/CPyUG/PyCon2014China/design/PyCon2013CHIna_logo_w200-h150.png"  class="center-block img-responsive pycon-logo"/>
 <h1 class="section__title--index">{{ message.home_title }}</h1>
-<div class="section__content">{{ message.home_intro }}</div>
+<div class="section__content">
+    {% if lang == "cn" %}
+        {% include "base/_index-begin-cn.html" %}
+    {% elif lang == "en" %}
+        {% include "base/_index-begin-en.html" %}
+    {% endif %}
+</div>
 </section>
 
 <!-- sponsors -->
