2015 site for br

--- a/src/base/_base.html
+++ b/src/base/_base.html
@@ -9,7 +9,7 @@
         {% if canonical_url %}<link rel="canonical" href="{{ canonical_url }}">{% endif %}
         <link rel="shortcut icon" href="{{ site.base_url }}/asset/img/favicon.ico{{ cachebuster_qs }}">
 
-        <title>{{ page_title }} - PyCon China 2014</title>
+        <title>{{ page_title }} - PyCon 2015 China</title>
 
         <link href="{{ site.base_url }}/asset/css/app.css{{ cachebuster_qs }}" rel="stylesheet">
 
