--- a/src/base/_index-begin-cn.html
+++ b/src/base/_index-begin-cn.html
@@ -2,46 +2,38 @@
   <div class="intro__content">
     <b>PyCon</b> 是全球 <a href="volunteers.html#pythoneer">Pythoneer</a> 最盛大的年度聚会,由 <a href="https://www.python.org/psf/about/">PSF(Python 基金会)</a>支持,致力于营造愉快的多元化的 Python 技术主题大会.
     PyConChina 是由 <a href="http://wiki.woodpecker.org.cn/moin/CPUG">CPyUG(华蠎用户组)</a>获得授权举办的 <b>中国PyCon</b> 年会.
-    迄今已是<b>第四届</b>, 继续由 CPyUG/TopGeek/GDG 协同,在 <b>北京/上海/珠海/苏州/杭州</b> 五城联办.
+    迄今已是<b>第五届</b>, 继续由 CPyUG/TopGeek/GDG 协同,在 <b>北京/上海/珠海/苏州/杭州</b> 五城联办.
     无论使用哪种,都可以/应该参加这场完全由社区组织的欢乐集会;-)
   </div>
 </section>
 <section class="mod-intro__tickets">
-  <h2 class="intro__title">门票策略</h2>
+
+</section>
+<section class="mod-intro__apply">
+  <h2 class="intro__title">日期</h2>
   <div class="intro__content">
-    <dl>
-    <dt>0RMB</dt>
-    <dd>学生票, 含所有礼品/茶点/午餐. <em class="intro__text--note">为支持学生,嘦有效学生证即可入场,但也要预订门票以便统计人数吼;-)</em></dd>
-    <dt>100RMB</dt>
-    <dd>普通票, 无发票, 待遇同学生票. <em class="intro__text--note-disabled">注意: 11月1日之前购买为50RMB</em></dd>
-    <dt>200RMB</dt>
-    <dd>企业票, 有发票, 待遇同普通票.</dd>
-    </dl>
-    <em class="intro__text--note">另: 蠎人赞助行者和企业票持有者, 有前排特座 ;-)</em>
+预订: 9.17~18
   </div>
 </section>
 <section class="mod-intro__apply">
-  <h2 class="intro__title">报名入口</h2>
+  <h2 class="intro__title">报名</h2>
   <div class="intro__content">
-    <em class="intro__text--note">(苏/杭 只有半天,全部免费)</em>
-    <div class="intro__apply-links">
-      <a href="http://19wu.com/PyConShanghai" class="intro__apply-link">上海入口</a>
-      <a href="http://19wu.com/PyConBeijing" class="intro__apply-link">北京入口</a>
-      <a href="http://19wu.com/PyConZhuhai" class="intro__apply-link">珠海入口</a>
-      <a href="http://19wu.com/PyConSuzhou" class="intro__apply-link">苏州入口</a>
-      <a href="https://gdgdocs.org/forms/d/1XW1pAjDncb_ww8PL9nhbfIP88MmWPTU7RUuGoNnvwwQ/viewform" class="intro__apply-link">杭州入口</a>
-    </div>
+TBD
   </div>
+
 </section>
+
 <section class="mod-intro__topics">
-  <h2 class="intro__title intro__title--disabled">主题提交</h2>
+  <h2 class="intro__title intro__title--disabled">主题</h2>
   <div class="intro__content">
-    <em class="intro__text--note">(已经集满,若有不满请直接联系大会)</em>
+TBD
   </div>
+
 </section>
+
 <section class="mod-intro__contact">
   <h2 class="intro__title">联系大会</h2>
   <div class="intro__content">
-    <a href="mailto:support@pychina.org?subject=ask-PyCon2014China" class="intro__text--contact">support@pychina.org</a>
+    <a href="mailto:support@pychina.org?subject=ask-PyCon2015China" class="intro__text--contact">support@pychina.org</a>
   </div>
 </section>
