#33 fixed 调整了菜单,追加了两个金数据报表

--- a/src/base/_index-begin-cn.html
+++ b/src/base/_index-begin-cn.html
@@ -2,7 +2,7 @@
   <div class="intro__content">
     <b>PyCon</b> 是全球 <a href="volunteers.html#pythoneer">Pythoneer</a> 最盛大的年度聚会,由 <a href="https://www.python.org/psf/about/">PSF(Python 基金会)</a>支持,致力于营造愉快的多元化的 Python 技术主题大会.
     PyConChina 是由 <a href="http://wiki.woodpecker.org.cn/moin/CPUG">CPyUG(华蠎用户组)</a>获得授权举办的 <b>中国PyCon</b> 年会.
-    迄今已是<b>第五届</b>, 继续由 CPyUG/TopGeek/GDG 协同,在 <b>北京/上海/珠海/苏州/杭州</b> 五城联办.
+    迄今已是<b>第五届</b>, 由 PyChina.org 发起,CPyUG/TopGeek 等社区协同,在 <b>9月13~27日</b> (程序员节 前后), <b>北京/上海/广州</b> 联办.
     无论使用哪种,都可以/应该参加这场完全由社区组织的欢乐集会;-)
   </div>
 </section>
@@ -12,7 +12,7 @@
 <section class="mod-intro__apply">
   <h2 class="intro__title">日期</h2>
   <div class="intro__content">
-预订: 9.17~18
+预计: 9.13~27
   </div>
 </section>
 <section class="mod-intro__apply">
@@ -26,7 +26,11 @@ TBD
 <section class="mod-intro__topics">
   <h2 class="intro__title intro__title--disabled">主题</h2>
   <div class="intro__content">
-TBD
+<b>
+<a href="proposals.html">
+申报入口
+  </a>
+  </b>
   </div>
 
 </section>
