--- a/src/proposals.html
+++ b/src/proposals.html
@@ -2,5 +2,7 @@
 {% set page_title = message.page_title_proposals %}
 
 {% block content %}
-<script src='https://www.jinshuju.net/f/oGC3kZ/embedded.js?banner=show&height=1462'></script>
+
+<script src='https://jinshuju.net/f/YUrOww/embedded.js?banner=show&background=white&height=1095'></script>
+
 {% endblock %}
