修改2015 E文 内容

--- a/src/base/_index-begin-en.html
+++ b/src/base/_index-begin-en.html
@@ -1,50 +1,41 @@
 <section class="mod-intro__text">
   <div class="intro__content">
   PyCon, the party of world-wide <a href="volunteers.html#pythoneer">Pythoneers</a>!
-  Authorized by <strong><a href="http://PyCon.org">PyCon.org</a></strong>
-  of <a href="https://www.python.org/psf/about/">Python Software Foundation</a>,
-  this is the fourth year of <code>PyCon China</code>.
-  Organized by CPyUG/GDG/TopGeek, PyCon China will be held simultaneously in
-  <strong>Shanghai/Beijing/Zhuhai/Suzhou/Hangzhou</strong> this year!
+  Supported by <strong><a href="https://www.python.org/psf/about/">PSF(Python Software Foundation)</a></strong>
+  this is the fifth year of <code>PyCon China</code>.
+	Organized by <strong><a href="https://pychina.org/">CPyUG(Chinese Python User Group)</a></strong>, PyCon China will be held simultaneously in
+  <strong>Shanghai/Beijing/Guangzhou</strong> this year!
   </div>
 </section>
 <ul>
-<section class="mod-intro__tickets">
-  <h2 class="intro__title">Tickets</h2>
+<section class="mod-intro__apply">
+  <h2 class="intro__title">Date</h2>
   <div class="intro__content">
-    <dl>
-    <dt>0RMB</dt>
-    <dd>Students ticket. Attend the meeting for free with your student ID card. All gifts and lunch covered. <em class="intro__text--note">Note: You still need to sign up via the provided link, so that we can send the entrance code to you.</em></dd>
-    <dt>100RMB</dt>
-    <dd>Normal ticket. All gifts and lunch included. <em class="intro__text--note-disabled">(50% off before Nov. 1st)</em></dd>
-    <dt>200RMB</dt>
-    <dd>Enterprise ticket. Invoice included, otherwise same as Normal ticket.</dd>
-    </dl>
-    <em class="intro__text--note">Donators and Enterprise-level attenders additionally have access to reserved seats ;-)</em>
+    September, 2015
   </div>
 </section>
 <section class="mod-intro__apply">
   <h2 class="intro__title">Signing Up</h2>
   <div class="intro__content">
-    <em class="intro__text--note">(Suzhou/Hangzhou events last for half a day, also both for free)</em>
-    <div class="intro__apply-links">
+		TBD
+    <!--<div class="intro__apply-links">
       <a href="http://19wu.com/PyConShanghai" class="intro__apply-link">Shanghai</a>
       <a href="http://19wu.com/PyConBeijing" class="intro__apply-link">Beijing</a>
       <a href="http://19wu.com/PyConZhuhai" class="intro__apply-link">Zhuhai</a>
       <a href="http://19wu.com/PyConSuzhou" class="intro__apply-link">Suzhou</a>
       <a href="https://gdgdocs.org/forms/d/1XW1pAjDncb_ww8PL9nhbfIP88MmWPTU7RUuGoNnvwwQ/viewform" class="intro__apply-link">Hangzhou</a>
-    </div>
+			</div>-->
   </div>
 </section>
 <section class="mod-intro__topics">
-  <h2 class="intro__title intro__title--disabled">Topic Submission</h2>
+  <h2 class="intro__title intro__title">Topic Submission</h2>
   <div class="intro__content">
-    <em class="intro__text--note">Topic submission for PyCon China 2014 has ended.</em>
+		<em class="intro__text--note"><a href="proposals.html">Topic Submission Entry for PyCon 2015 China</em>
   </div>
 </section>
 <section class="mod-intro__contact">
   <h2 class="intro__title">Contact us</h2>
   <div class="intro__content">
-    <a href="mailto:support@pychina.org?subject=ask-PyCon2014China" class="intro__text--contact">support@pychina.org</a>
+    <a href="mailto:support@pychina.org?subject=ask-PyConChina2015" class="intro__text--contact">support@pychina.org</a>
   </div>
 </section>
