--- a/src/base/_index-begin-cn.html
+++ b/src/base/_index-begin-cn.html
@@ -40,8 +40,8 @@ TBD
   <div class="intro__content">
     <a href="mailto:support@pychina.org?subject=ask-PyCon2015China" class="intro__text--contact">support@pychina.org</a>
 <ul>
-<li>赞助商权益说明书: <a href="http://dn-pyconcn.qbox.me/zoomquiet/stuff15/PyCon15China_sponsor_info.pdf">下载</a>
-    </li><li>特别的,个人赞助权益说明书: <a href="http://dn-pyconcn.qbox.me/zoomquiet/stuff15/PyCon15China_personal_sponsor.pdf">下载</a>
+<li>赞助商权益说明书: <a href="http://pyconcn.qiniucdn.com/zoomquiet/stuff15/PyCon15China_sponsor_info.pdf">下载</a>
+    </li><li>特别的,个人赞助权益说明书: <a href="http://pyconcn.qiniucdn.com/zoomquiet/stuff15/PyCon15China_personal_sponsor.pdf">下载</a>
     </li>
 </ul>
 
