fixed page_title_tshirt in TEE pages

--- a/src/tshirt.html
+++ b/src/tshirt.html
@@ -1,5 +1,5 @@
 {% extends "base/_base.html" %}
-{% set page_title = message.page_title_proposals %}
+{% set page_title = message.page_title_tshirt %}
 
 {% block content %}
 
