up hzbook-logo; try put new logo failt

--- a/src/base/_nav.html
+++ b/src/base/_nav.html
@@ -14,10 +14,16 @@
         <span class="sr-only">Toggle navigation</span>
       </button>
 
-      <!-- Main title -->
-      <a class="navbar-brand" href="{{ site.home_url }}"><span class="navbar-brand__inner">{{ site.name }}</span></a>
-    </div>
+      <!-- Main title 
+      <img 
+        src="http://pyconcn.qiniucdn.com/zoomquiet/res/logo/150801-cnpycon-barnner-h80.png?imageView2/2/h/50"
+        alt="{{ site.name }}">
+      -->
+      <a class="navbar-brand" href="{{ site.home_url }}">
+            <span class="navbar-brand__inner">{{ site.name }}
+      </span></a>
 
+    </div>
     <!-- Expanded navigation -->
     <div class="navbar-collapse collapse">
       <!-- Main navigation -->
