up speedycloud logo

--- a/src/base/_nav.html
+++ b/src/base/_nav.html
@@ -17,10 +17,13 @@
       <!-- Main title 
       <img 
         src="http://pyconcn.qiniucdn.com/zoomquiet/res/logo/150801-cnpycon-barnner-h80.png?imageView2/2/h/50"
-        alt="{{ site.name }}">
+        alt="{{ site.name }}"/>
       -->
       <a class="navbar-brand" href="{{ site.home_url }}">
-            <span class="navbar-brand__inner">{{ site.name }}
+            <span class="navbar-brand__inner">      <img 
+        src="http://pyconcn.qiniucdn.com/zoomquiet/res/logo/150801-cnpycon-barnner-h80.png?imageView2/2/h/50"
+        alt="{{ site.name }}"/>
+{{ site.name }}
       </span></a>
 
     </div>
