--- a/src/index.html
+++ b/src/index.html
@@ -84,11 +84,9 @@
     <section class="page__module mod-speakers">
     <h2 class="section__title">{{ message.speechmaker }}</h2>
     {{ proposal_list(global_proposals, message.global) }}
-    {{ proposal_list(beijing_proposals, message.beijing) }}
     {{ proposal_list(shanghai_proposals, message.shanghai) }}
-    {{ proposal_list(zhuhai_proposals, message.zhuhai) }}
-    {{ proposal_list(hangzhou_proposals, message.hangzhou) }}
-    {{ proposal_list(suzhou_proposals, message.suzhou) }}
+    {{ proposal_list(guangzhou_proposals, message.guangzhou) }}
+    {{ proposal_list(beijing_proposals, message.beijing) }}
     </section>
 {% endif %}
 
