pub ticket links,and others tiny fixed

--- a/src/base/_index-begin-cn.html
+++ b/src/base/_index-begin-cn.html
@@ -6,23 +6,33 @@
     无论使用哪种,都可以/应该参加这场完全由社区组织的欢乐集会;-)
   </div>
 </section>
+
 <section class="mod-intro__tickets">
 
 </section>
+
 <section class="mod-intro__apply">
-  <h2 class="intro__title">日期</h2>
+  <h2 class="intro__title">抢票</h2>
   <div class="intro__content">
-预计: 9.13~27
+<ul>
+<li>9.12 <a href="http://pycon2015shanghai.31huiyi.com/">上海场</a>
+    </li>
+<li>9.13 <a href="http://pycon2015guangzhou.31huiyi.com/">广州场</a>
+    </li>
+<li>9.19 <a href="http://pycon2015beijing.31huiyi.com/">北京场</a>
+    </li>
+</ul>
   </div>
 </section>
+
+
+<!--
 <section class="mod-intro__apply">
   <h2 class="intro__title">报名</h2>
   <div class="intro__content">
 TBD
   </div>
-
 </section>
-
 <section class="mod-intro__topics">
   <h2 class="intro__title intro__title--disabled">主题</h2>
   <div class="intro__content">
@@ -35,15 +45,13 @@ TBD
 
 </section>
 
+-->
+
 <section class="mod-intro__contact">
   <h2 class="intro__title">联系大会</h2>
   <div class="intro__content">
-    <a href="mailto:support@pychina.org?subject=ask-PyCon2015China" class="intro__text--contact">support@pychina.org</a>
-<ul>
-<li>赞助商权益说明书: <a href="http://pyconcn.qiniucdn.com/zoomquiet/stuff15/PyCon15China_sponsor_info.pdf">下载</a>
-    </li><li>特别的,个人赞助权益说明书: <a href="http://pyconcn.qiniucdn.com/zoomquiet/stuff15/PyCon15China_personal_sponsor.pdf">下载</a>
-    </li>
-</ul>
+    <a href="mailto:support@pychina.org?subject=ask-PyCon2015China" 
+      class="intro__text--contact">support@pychina.org</a>
 
   </div>
 </section>
