--- a/src/base/_index-begin-cn.html
+++ b/src/base/_index-begin-cn.html
@@ -12,7 +12,7 @@
 </section>
 
 <section class="mod-intro__apply">
-  <h2 class="intro__title">抢票</h2>
+  <h2 class="intro__title">报名+抢票</h2>
   <div class="intro__content">
 <ul>
 <li>9.12 <a href="http://pycon2015shanghai.31huiyi.com/">上海场</a>
