--- a/src/base/_index-begin-cn.html
+++ b/src/base/_index-begin-cn.html
@@ -7,51 +7,19 @@
   </div>
 </section>
 
-<section class="mod-intro__tickets">
-
-</section>
-
 <section class="mod-intro__apply">
   <h2 class="intro__title">报名+抢票</h2>
-  <div class="intro__content">
-<ul>
-<li>9.12 <a href="http://pycon2015shanghai.31huiyi.com/">上海场</a>
-    </li>
-<li>9.13 <a href="http://pycon2015guangzhou.31huiyi.com/">广州场</a>
-    </li>
-<li>9.19 <a href="http://pycon2015beijing.31huiyi.com/">北京场</a>
-    </li>
-</ul>
+  <div class="intro__apply-links">
+    <a href="http://pycon2015shanghai.31huiyi.com/" class="intro__apply-link">9.12 上海场</a>
+    <a href="http://pycon2015guangzhou.31huiyi.com/" class="intro__apply-link">9.13 广州场</a>
+    <a href="http://pycon2015beijing.31huiyi.com/" class="intro__apply-link">9.19 北京场</a>
   </div>
 </section>
-
-
-<!--
-<section class="mod-intro__apply">
-  <h2 class="intro__title">报名</h2>
-  <div class="intro__content">
-TBD
-  </div>
-</section>
-<section class="mod-intro__topics">
-  <h2 class="intro__title intro__title--disabled">主题</h2>
-  <div class="intro__content">
-<b>
-<a href="proposals.html">
-申报入口
-  </a>
-  </b>
-  </div>
-
-</section>
-
--->
 
 <section class="mod-intro__contact">
   <h2 class="intro__title">联系大会</h2>
   <div class="intro__content">
     <a href="mailto:support@pychina.org?subject=ask-PyCon2015China" 
       class="intro__text--contact">support@pychina.org</a>
-
   </div>
 </section>
