--- a/src/base/_index-begin-en.html
+++ b/src/base/_index-begin-en.html
@@ -1,41 +1,27 @@
 <section class="mod-intro__text">
   <div class="intro__content">
-  PyCon, the party of world-wide <a href="volunteers.html#pythoneer">Pythoneers</a>!
+    PyCon, the party of world-wide <a href="volunteers.html#pythoneer">Pythoneers</a>!
   Supported by <strong><a href="https://www.python.org/psf/about/">PSF(Python Software Foundation)</a></strong>
   this is the fifth year of <code>PyCon China</code>.
-	Organized by <strong><a href="https://pychina.org/">CPyUG(Chinese Python User Group)</a></strong>, PyCon China will be held simultaneously in
+  Organized by <strong><a href="https://pychina.org/">CPyUG(Chinese Python User Group)</a></strong>, PyCon China will be held simultaneously in
   <strong>Shanghai/Beijing/Guangzhou</strong> this year!
   </div>
 </section>
-<ul>
+
 <section class="mod-intro__apply">
-  <h2 class="intro__title">Date</h2>
-  <div class="intro__content">
-    September, 2015
+  <h2 class="intro__title">SIGN UP</h2>
+  <div class="intro__apply-links">
+    <a href="http://pycon2015shanghai.31huiyi.com/" class="intro__apply-link">9.12 Shanghai</a>
+    <a href="http://pycon2015guangzhou.31huiyi.com/" class="intro__apply-link">9.13 Guangzhou</a>
+    <a href="http://pycon2015beijing.31huiyi.com/" class="intro__apply-link">9.19 Beijing</a>
   </div>
 </section>
-<section class="mod-intro__apply">
-  <h2 class="intro__title">Signing Up</h2>
-  <div class="intro__content">
-		TBD
-    <!--<div class="intro__apply-links">
-      <a href="http://19wu.com/PyConShanghai" class="intro__apply-link">Shanghai</a>
-      <a href="http://19wu.com/PyConBeijing" class="intro__apply-link">Beijing</a>
-      <a href="http://19wu.com/PyConZhuhai" class="intro__apply-link">Zhuhai</a>
-      <a href="http://19wu.com/PyConSuzhou" class="intro__apply-link">Suzhou</a>
-      <a href="https://gdgdocs.org/forms/d/1XW1pAjDncb_ww8PL9nhbfIP88MmWPTU7RUuGoNnvwwQ/viewform" class="intro__apply-link">Hangzhou</a>
-			</div>-->
-  </div>
-</section>
-<section class="mod-intro__topics">
-  <h2 class="intro__title intro__title">Topic Submission</h2>
-  <div class="intro__content">
-		<em class="intro__text--note"><a href="proposals.html">Topic Submission Entry for PyCon 2015 China</em>
-  </div>
-</section>
+
 <section class="mod-intro__contact">
-  <h2 class="intro__title">Contact us</h2>
+  <h2 class="intro__title">CONTACT</h2>
   <div class="intro__content">
-    <a href="mailto:support@pychina.org?subject=ask-PyConChina2015" class="intro__text--contact">support@pychina.org</a>
+    <a href="mailto:support@pychina.org?subject=ask-PyCon2015China" 
+      class="intro__text--contact">support@pychina.org</a>
   </div>
 </section>
+
