fixed tickets gates linbks

--- a/src/base/_index-begin-cn.html
+++ b/src/base/_index-begin-cn.html
@@ -8,7 +8,7 @@
 </section>
 
 <section class="mod-intro__apply">
-  <h2 class="intro__title">报名+抢票</h2>
+  <h2 class="intro__title">↓门票↓链接↓</h2>
   <div class="intro__apply-links">
     <a href="http://pycon2015shanghai.31huiyi.com/" class="intro__apply-link">9.12 上海场</a>
     <a href="http://pycon2015guangzhou.31huiyi.com/" class="intro__apply-link">9.13 广州场</a>
