fixed home words and links styles

--- a/src/base/_index-begin-cn.html
+++ b/src/base/_index-begin-cn.html
@@ -1,18 +1,16 @@
 <section class="mod-intro__text">
   <div class="intro__content">
-    <b>PyCon</b> 是全球 <a href="volunteers.html#pythoneer">Pythoneer</a> 最盛大的年度聚会,由 <a href="https://www.python.org/psf/about/">PSF(Python 基金会)</a>支持,致力于营造愉快的多元化的 Python 技术主题大会.
-    PyConChina 是由 <a href="http://wiki.woodpecker.org.cn/moin/CPUG">CPyUG(华蠎用户组)</a>获得授权举办的 <b>中国PyCon</b> 年会.
-    迄今已是<b>第五届</b>, 由 PyChina.org 发起,CPyUG/TopGeek 等社区协同,在 <b>9月13~27日</b> (程序员节 前后), <b>北京/上海/广州</b> 联办.
-    无论使用哪种,都可以/应该参加这场完全由社区组织的欢乐集会;-)
+    PyCon大会就是现在相当火的开源编程语言Python的全球性的盛会，PyConChina 是由 CPyUG(华蠎用户组)获得授权举办的中国PyCon年会. 迄今已是第五届, 由PyChina.org发起,CPyUG/TopGeek 等社区协同,在2015年 9月12日（上海），9月13日（广州），9月19日（北京）分别举办; 无论您偏好哪种编程语言, 都欢迎来参加这场完全由Python中国社区组织的欢乐集会！
+
   </div>
 </section>
 
 <section class="mod-intro__apply">
   <h2 class="intro__title">↓门票↓链接↓</h2>
   <div class="intro__apply-links">
-    <a href="http://pycon2015shanghai.31huiyi.com/" class="intro__apply-link">9.12 上海场</a>
-    <a href="http://pycon2015guangzhou.31huiyi.com/" class="intro__apply-link">9.13 广州场</a>
-    <a href="http://pycon2015beijing.31huiyi.com/" class="intro__apply-link">9.19 北京场</a>
+    <a href="http://pycon2015shanghai.31huiyi.com/" class="intro__apply-link">上海场报名</a>
+    <a href="http://pycon2015guangzhou.31huiyi.com/" class="intro__apply-link">广州场报名</a>
+    <a href="http://pycon2015beijing.31huiyi.com/" class="intro__apply-link">北京场报名</a>
   </div>
 </section>
 
