--- a/src/base/_index-begin-cn.html
+++ b/src/base/_index-begin-cn.html
@@ -3,10 +3,8 @@
     PyCon大会就是现在相当火的开源编程语言Python的全球性的盛会，PyConChina 是由 CPyUG(华蠎用户组)获得授权举办的中国PyCon年会. 迄今已是第五届, 由PyChina.org发起,CPyUG/TopGeek 等社区协同,在2015年 9月12日（上海），9月13日（广州），9月19日（北京）分别举办; 无论您偏好哪种编程语言, 都欢迎来参加这场完全由Python中国社区组织的欢乐集会！
 
   </div>
-</section>
 
-<section class="mod-intro__apply">
-  <h2 class="intro__title">↓门票↓链接↓</h2>
+  <h2 class="intro__title">↓大会报名↓通道↓</h2>
   <div class="intro__apply-links">
     <a href="http://pycon2015shanghai.31huiyi.com/" class="intro__apply-link">上海场报名</a>
     <a href="http://pycon2015guangzhou.31huiyi.com/" class="intro__apply-link">广州场报名</a>
@@ -14,6 +12,10 @@
   </div>
 </section>
 
+<section class="mod-intro__apply">
+</section>
+
+<!--
 <section class="mod-intro__contact">
   <h2 class="intro__title">联系大会</h2>
   <div class="intro__content">
@@ -21,3 +23,5 @@
       class="intro__text--contact">support@pychina.org</a>
   </div>
 </section>
+
+-->
