fixed taobao as no

--- a/src/base/_index-begin-cn.html
+++ b/src/base/_index-begin-cn.html
@@ -10,9 +10,9 @@
     <a href="http://pycon2015guangzhou.31huiyi.com/" class="intro__apply-link">广州场报名</a>
     <a href="http://pycon2015beijing.31huiyi.com/" class="intro__apply-link">北京场报名</a>
   </div>
-  <h2 class="intro__title">苦短衫 2015 版零售</h2>
+  <h2 class="intro__title">苦短衫 2015 版</h2>
   <div class="intro__apply-links">
-    <a href="https://item.taobao.com/item.htm?id=521694071295" class="intro__apply-link">taobao 店入口</a>
+    <a href="https://item.taobao.com/item.htm?id=521694071295" class="intro__apply-link">零售68元/件包邮</a>
   </div>
 
 </section>
