del ticket for sh gz

--- a/src/base/_index-begin-cn.html
+++ b/src/base/_index-begin-cn.html
@@ -6,10 +6,14 @@
 
   <h2 class="intro__title">↓大会报名↓通道↓</h2>
   <div class="intro__apply-links">
-    <a href="http://pycon2015shanghai.31huiyi.com/" class="intro__apply-link">上海场报名</a>
-    <a href="http://pycon2015guangzhou.31huiyi.com/" class="intro__apply-link">广州场报名</a>
     <a href="http://pycon2015beijing.31huiyi.com/" class="intro__apply-link">北京场报名</a>
+
+    <del class="intro__apply-link">上海已售罄</del>
+    
+    <del class="intro__apply-link">广州已售罄</del>
+
   </div>
+  
   <h2 class="intro__title">苦短衫 2015 版</h2>
   <div class="intro__apply-links">
     <a href="https://item.taobao.com/item.htm?id=521694071295" class="intro__apply-link">零售68元/件包邮</a>
