pub cython tape + slides

--- a/src/base/_schedule.html
+++ b/src/base/_schedule.html
@@ -14,7 +14,7 @@
 
                 {% if a_speaker.topic.slide1 %}
                     <a href="{{ a_speaker.topic.slide1 }}" class="schedule__topic__slide">
-                        {{- message.slide -}}
+                        {{- message.slide1 -}}
                     </a>
                 {% endif %}
 
